fix : post paging 처리 typeCast 에러 잡기