@@ -12,6 +12,7 @@ import com.example.instargram_clone.repository.MemberRepository;
 import com.example.instargram_clone.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -22,6 +23,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 import static com.example.instargram_clone.config.BaseResponseStatus.GET_POSTS_NOT_EXISTS_INFO;
 import static java.util.Arrays.stream;
@@ -97,7 +99,11 @@ public class PostService {
         // 한 페이지당 3개식 글을 보여주고 정렬 기준은 디폴트 값으로
         Page<Post> postsPages = postRepository.findAll(PageRequest.of(page, pageLimit));
 
-        Page<PostResponse> postsResponsePages = (Page<PostResponse>) postsPages.stream().map(PostResponse::from).toList();
-        return postsResponsePages;
+        List<PostResponse> postsResponseList = postsPages.getContent().stream()
+                .map(PostResponse::from)
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(postsResponseList, postsPages.getPageable(), postsPages.getTotalElements());
     }
 }
+
